--- a/index.html
+++ b/index.html
@@ -133,10 +133,10 @@ button:hover {
     <img src="bebi.jpg" alt="girlfriend">
     <h2>To my baby<br>(^｡^)</h2>
     <p style="text-align: left;">
-      You're the best thing that life has given me so far and I know nothing can take your place in my heart. The love I have for you is pure, with all my heart! You bring so much joy into my life even in the darkest times just by being with me.<br><br>
+      Honestly, I'm not good with letters but here we are. <br><br>
       I'm so blessed to have met you in my journey in life. It feels like I have been living in paradise since I met you. You have made me a better person and have always believed in me. <br><br>
-      Life comes with challenges but with you by my side, we can take anything together. I love you for all what you are, all that you have been and all that you are yet to be. If I know what love is, it is because of you!<br><br>
-      I LOVE YOU SO MUCH MY LOVE! HAPPY GIRLFRIEND’S DAY!
+      I never knew I could feel this happy and supported until you came along. You have a way of making everything brighter and easier just by being you. Thank you for your patience, your kindness, and for every little thing you do. <br><br>
+      I LOVE YOU SO MUCH, MY LOVE! HAPPY GIRLFRIEND’S DAY!
     </p>
     <button class="start-over" onclick="startOver()">Start Over ♥</button>
   </div>
