--- a/index.html
+++ b/index.html
@@ -133,10 +133,10 @@ button:hover {
     <img src="bebi.jpg" alt="girlfriend">
     <h2>To my baby<br>(^｡^)</h2>
     <p style="text-align: left;">
-      Honestly, I'm not good with letters but here we are. <br><br>
+      Honestly, I'm not good with letters so I apologize if it seems lacking. <br><br>
       I'm so blessed to have met you in my journey in life. It feels like I have been living in paradise since I met you. You have made me a better person and have always believed in me. <br><br>
-      I never knew I could feel this happy and supported until you came along. You have a way of making everything brighter and easier just by being you. Thank you for your patience, your kindness, and for every little thing you do. <br><br>
-      I LOVE YOU SO MUCH, MY LOVE! HAPPY GIRLFRIEND’S DAY!
+      My favorite part of every day is getting to talk to you, hear your voice, and just be in your presence. You are my favorite place to be. I never knew I could feel this happy and supported until you came along. <br><br>
+      Thank you for your patience, your kindness, and for making everything brighter. I LOVE YOU SO MUCH MY LOVE! HAPPY GIRLFRIEND’S DAY!
     </p>
     <button class="start-over" onclick="startOver()">Start Over ♥</button>
   </div>
