--- a/index.html
+++ b/index.html
@@ -136,7 +136,8 @@ button:hover {
       Honestly, I'm not good with letters so I apologize if it seems lacking. <br><br>
       I'm so blessed to have met you in my journey in life. It feels like I have been living in paradise since I met you. You have made me a better person and have always believed in me. <br><br>
       My favorite part of every day is getting to talk to you, hear your voice, and just be in your presence. You are my favorite place to be. I never knew I could feel this happy and supported until you came along. <br><br>
-      Thank you for your patience, your kindness, and for making everything brighter. I LOVE YOU SO MUCH MY LOVE! HAPPY GIRLFRIEND’S DAY!
+      Thank you for your patience, your kindness, and for making everything brighter. <br><br>
+      I LOVE YOU SO MUCH MY LOVE! HAPPY GIRLFRIEND’S DAY!
     </p>
     <button class="start-over" onclick="startOver()">Start Over ♥</button>
   </div>
